--- a/ArchitectureTemplate.Mvc/Views/Login/Index.cshtml
+++ b/ArchitectureTemplate.Mvc/Views/Login/Index.cshtml
@@ -5,12 +5,11 @@
 
 <section id="wrapper">
     <section class="container text-center">
-        <h1 class="text-center">
-            <strong>Bem-vindo</strong> a ArchitectureTemplate
-            @*<span class="subtitle">Test</span>*@
+        <h1 class="text-center margin-top80">
+            <strong>Bem-vindo</strong> ao AF Architecture Template
         </h1>
         <p class="lead">
-            ArchitectureTemplate
+            This Solution implement a template of architecture that I have been using in my projects
         </p>
     </section>
 
