--- a/ArchitectureTemplate.Mvc/Views/Shared/_Layout.cshtml
+++ b/ArchitectureTemplate.Mvc/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 <html lang="pt-Br">
 <head>
     <meta charset="utf-8"/>
-    <title>@ViewBag.Title - ArchitectureTemplate</title>
+    <title>@ViewBag.Title - AF Architectur</title>
     <meta name="keywords" content="Template, Archictecture" />
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0" />
@@ -98,7 +98,7 @@
     <footer>
         <div class="footer-bar">
             <div class="container">
-                <span class="copyright">&copy;Copyright Farias Solutions. Todos os direitos reservados.</span>
+                <span class="copyright">&copy;CopyrightFarias Solutions (Aderbal Farias). Todos os direitos reservados.</span>
                 <a class="toTop" href="#topNav">VOLTAR AO TOPO <i class="fa fa-arrow-circle-up"></i></a>
             </div>
         </div>
