--- a/ArchitectureTemplate.Mvc/Views/Shared/_LayoutLogin.cshtml
+++ b/ArchitectureTemplate.Mvc/Views/Shared/_LayoutLogin.cshtml
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>@ViewBag.Title - ArchitectureTemplate</title>
+    <title>@ViewBag.Title - AF Architecture</title>
     <meta name="keywords" content="Architecture, Template" />
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0" />
@@ -21,9 +21,6 @@
     <link href="~/wwwroot/css/animate.css" rel="stylesheet" type="text/css" />
     <link href="~/wwwroot/css/superslides.css" rel="stylesheet" type="text/css" />
     <link href="~/wwwroot/css/site.css" rel="stylesheet" type="text/css" />
-
-    <!-- REVOLUTION SLIDER -->
-    <link href="~/wwwroot/plugins/revolution-slider/css/settings.css" rel="stylesheet" type="text/css" />
 
     <!-- css -->
     <link href="~/wwwroot/css/essentials.css" rel="stylesheet" type="text/css" />
@@ -61,24 +58,10 @@
             <a class="logo pull-left" href="@Url.Action("Index", "Login")">
                 <img src="~/wwwroot/images/logo.png" alt="ArchitectureTemplate" />
             </a>
-
-            <div class="navbar-collapse nav-main-collapse collapse pull-left">
-                <nav class="nav-main mega-menu display-none">
-                    <ul class="nav nav-pills nav-main scroll-menu" id="topMain">
-                        <li>
-                            <a href="@Url.Action("About", "Info")">Sobre o ArchitectureTemplate</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
         </div>
     </header>
 
     <span id="header_shadow"></span>
-
-    <div id="showSwitcher" class="styleSecondColor">
-        <i class="fa fa-angle-double-right"></i>
-    </div>
 
     <!-- Conteúdo -->
     @RenderBody()
@@ -87,7 +70,7 @@
     <footer>
         <div class="footer-bar">
             <div class="container">
-                <span class="copyright">Copyright © Farias Solutions. Todos os direitos reservados.</span>
+                <span class="copyright">Copyright ©Farias Solutions (Aderbal Farias). Todos os direitos reservados.</span>
                 <a class="toTop" href="#topNav">VOLTAR AO TOPO <i class="fa fa-arrow-circle-up"></i></a>
             </div>
         </div>
@@ -98,7 +81,7 @@
                     <div class="column col-md-4">
                         <h3>CONTATO</h3>
                         <p class="contact-desc">
-                            <a href="http://www.fariassolution.com.br/" target="_blank">
+                            <a href="http://www.aderbalfarias.com.br/" target="_blank">
                                 my website
                             </a>
                         </p>
@@ -114,7 +97,6 @@
     <script type="text/javascript" src="~/wwwroot/plugins/jquery.cookie.js"></script>
     <script type="text/javascript" src="~/wwwroot/plugins/jquery.appear.js"></script>
     <script type="text/javascript" src="~/wwwroot/plugins/jquery.isotope.js"></script>
-    <script type="text/javascript" src="~/wwwroot/plugins/masonry.js"></script>
     <script type="text/javascript" src="~/wwwroot/js/layout.js"></script>
 
     <script type="text/javascript" src="~/wwwroot/plugins/bootstrap/js/bootstrap.min.js"></script>
