--- a/ArchitectureTemplate.Mvc/wwwroot/css/layout.css
+++ b/ArchitectureTemplate.Mvc/wwwroot/css/layout.css
@@ -643,15 +643,15 @@ header#topNav li a i.fa {
 }
 .image-caption {
 	text-align:center;
-    position: absolute;
-    left: 50%; top: 50%;
+	position: absolute;
+	left: 50%; top: 50%;
 	margin-top:-30px; /* header height/2 */
-    display: inline-block;
-    max-width: 900px;
+	display: inline-block;
+	max-width: 900px;
 	z-index:2;
 	color:#fff;
 
-    -webkit-transform: translate(-50%,-50%);
+	-webkit-transform: translate(-50%,-50%);
 	   -moz-transform: translate(-50%,-50%);
 		-ms-transform: translate(-50%,-50%);
 		 -o-transform: translate(-50%,-50%);
@@ -1009,8 +1009,8 @@ header.page-title {
 
 .tp-caption.roundedimage img {
 	-webkit-border-radius: 300px;
-    -moz-border-radius: 300px;
-    border-radius: 300px;
+	-moz-border-radius: 300px;
+	border-radius: 300px;
 }
 
 .fullscreenbanner-container,
@@ -1401,13 +1401,13 @@ footer ul li {
 	list-style:none;
 	margin:0; padding:0;
 }
-footer .footer-bar {
-	background:#292f38;
-	display:block;
-	text-transform:uppercase;
-	position:relative;
-    border-top: 1px solid #ffffff;
-}
+	footer .footer-bar {
+		background: #00B7E4;
+		display: block;
+		text-transform: uppercase;
+		position: relative;
+		border-top: 1px solid #ffffff;
+	}
 
 footer .footer-bar .fa {
 	margin-left:10px;
@@ -1416,27 +1416,27 @@ footer .footer-bar .copyright {
 	display:inline-block;
 	padding:20px 0;
 }
-footer .footer-bar .toTop {
-	position:absolute;
-	right:0;
-	padding:20px 0;
-	padding-left:70px;
-	width:50%;
-	display:inline-block;
-	float:right;
-	text-align:center;
-	border-left:#403E44 1px dashed;
-} 
+		footer .footer-bar .toTop {
+			position: absolute;
+			right: 0;
+			padding: 20px 0;
+			padding-left: 70px;
+			width: 50%;
+			display: inline-block;
+			float: right;
+			text-align: center;
+			border-left: #008BAF 1px dashed;
+		} 
 footer .footer-bar .toTop:hover {
 	text-decoration:none;
 } 
 
 	/* footer columns */
 	footer .footer-content {
-		background:#2E363F;
-		border-top:#403E44 1px dashed;
-		padding:30px 0;
-		display:block;
+		background: #01C2F3;
+		border-top: #008BAF 1px dashed;
+		padding: 30px 0;
+		display: block;
 	}
 		footer .footer-content h3 {
 			color:#fff !important;
@@ -1450,22 +1450,21 @@ footer .footer-bar .toTop:hover {
 		}
 
 		/* footer logo */
-		footer .column.logo {
-			position:relative;
-			background:#292f38;
-			display:block;
-			margin-top:-30px;
-			margin-bottom:-30px;
-			padding-top:50px;
-			padding-bottom:50px;
-
-			-webkit-border-bottom-right-radius: 15px;
-			 -webkit-border-bottom-left-radius: 15px;
+			footer .column.logo {
+				position: relative;
+				background: #008BAF;
+				display: block;
+				margin-top: -30px;
+				margin-bottom: -30px;
+				padding-top: 50px;
+				padding-bottom: 50px;
+				-webkit-border-bottom-right-radius: 15px;
+				-webkit-border-bottom-left-radius: 15px;
 				-moz-border-radius-bottomright: 15px;
-				 -moz-border-radius-bottomleft: 15px;
-					border-bottom-right-radius: 15px;
-					 border-bottom-left-radius: 15px;
-		}
+				-moz-border-radius-bottomleft: 15px;
+				border-bottom-right-radius: 15px;
+				border-bottom-left-radius: 15px;
+			}
 		footer .column.logo h4 {
 			color:#fff;
 			font-size:20px;
@@ -1519,11 +1518,11 @@ footer .footer-bar .toTop:hover {
 	footer p {
 		line-height:18px;
 	}
-	footer p.contact-desc {
-		margin:0 0 30px 0; 
-		padding:0 0 10px 0;
-		border-bottom:#403E44 1px dashed;
-	}
+		footer p.contact-desc {
+			margin: 0 0 30px 0;
+			padding: 0 0 10px 0;
+			border-bottom: #008BAF 1px dashed;
+		}
 	footer address .footer-sprite.address {
 		background-position:0 0;
 	}
@@ -1768,5 +1767,5 @@ footer .footer-bar .toTop:hover {
 
 
 hr {
-    margin: 30px 0;
+	margin: 30px 0;
 }
