--- a/ArchitectureTemplate.Mvc/Views/Home/Index.cshtml
+++ b/ArchitectureTemplate.Mvc/Views/Home/Index.cshtml
@@ -9,11 +9,11 @@
                 <b>Seja muito bem-vindo</b>
             </h1>
             <h1>
-                à ArchitectureTemplate
+                ao AF Architecture
             </h1>
         </div>
-        <div class="col-md-12 text-center">
+        @*<div class="col-md-12 text-center">
             <img alt="home" class="img-responsive" src="/wwwroot/images/demo/home_tecnologia.jpg">
-        </div>
+        </div>*@
     </div>
 </section>
