--- a/ArchitectureTemplate.Mvc/Views/Shared/Error.cshtml
+++ b/ArchitectureTemplate.Mvc/Views/Shared/Error.cshtml
@@ -35,7 +35,7 @@
 			Informamos que ocorreu um erro inesperado no atendimento desta sua solicitação.
 			<br>
 			Pedimos a gentileza de comunicar ao seu gestor para que entre em contato com o
-			Administrador do Sistema para comunica-lo sobre o ocorrido.
+			Administrator do Sistema para comunica-lo sobre o ocorrido.
 			<br>
 			Tão logo a causa seja identificada e regularizada, informaremos ao seu gestor.
 			<br>
@@ -45,7 +45,7 @@
 			Atenciosamente
 		</p>
 		<p>
-			Administrador do Sistema
+			Administrator do Sistema
 		</p>
 	</article>
 </body>
