--- a/ArchitectureTemplate.Mvc/Views/Shared/_Layout.cshtml
+++ b/ArchitectureTemplate.Mvc/Views/Shared/_Layout.cshtml
@@ -98,7 +98,7 @@
     <footer>
         <div class="footer-bar">
             <div class="container">
-                <span class="copyright">&copy;CopyrightFarias Solutions (Aderbal Farias). Todos os direitos reservados.</span>
+                <span class="copyright">&copy;Copyright Farias Solutions (Aderbal Farias)</span>
                 <a class="toTop" href="#topNav">VOLTAR AO TOPO <i class="fa fa-arrow-circle-up"></i></a>
             </div>
         </div>
