--- a/ArchitectureTemplate.Mvc/Views/Shared/_MenuInfo.cshtml
+++ b/ArchitectureTemplate.Mvc/Views/Shared/_MenuInfo.cshtml
@@ -27,7 +27,7 @@
                             @if ((item.Key.Equals("Telefone") || item.Key.Equals("Celular")) 
                                 && !string.IsNullOrEmpty(item.Value) && !string.IsNullOrEmpty(ViewBag.CodigoAgente))
                             {
-                                <a onclick="Discar(@item.Value, @ViewBag.ProcessoId)"><i class="fa fw fa-phone"></i></a>
+                                <a onclick="Discar(@item.Value, @ViewBag.TestId)"><i class="fa fw fa-phone"></i></a>
                             }
                         </p>
                     </li>
