--- a/ArchitectureTemplate.Mvc/Views/Menu/_List.cshtml
+++ b/ArchitectureTemplate.Mvc/Views/Menu/_List.cshtml
@@ -9,7 +9,7 @@
         </tr>
         <tr>
             <th>
-                Identificador
+                Identific
             </th>
             <th>
                 Nome do Menu
