--- a/ArchitectureTemplate.Mvc/Views/Shared/_Layout.cshtml
+++ b/ArchitectureTemplate.Mvc/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
 
     <!-- css -->
     <link href="~/wwwroot/css/essentials.css" rel="stylesheet" type="text/css"/>
-    @*<link href="~/wwwroot/css/animate.css" rel="stylesheet" type="text/css" />*@
+    <link href="~/wwwroot/css/animate.css" rel="stylesheet" type="text/css" />
     <link href="~/wwwroot/plugins/bootstrap-fileinput/css/fileinput.min.css" rel="stylesheet" type="text/css" />
     <link href="~/wwwroot/css/layout.css" rel="stylesheet" type="text/css" />
     <link href="~/wwwroot/css/layout-responsive.css" rel="stylesheet" type="text/css" />
