--- a/ArchitectureTemplate.Mvc/Views/Shared/_LayoutLogin.cshtml
+++ b/ArchitectureTemplate.Mvc/Views/Shared/_LayoutLogin.cshtml
@@ -14,12 +14,7 @@
     <!-- css principal -->
     <link href="~/wwwroot/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="~/wwwroot/css/font-awesome.css" rel="stylesheet" type="text/css" />
-    <link href="~/wwwroot/plugins/owl-carousel/owl.carousel.css" rel="stylesheet" type="text/css" />
-    <link href="~/wwwroot/plugins/owl-carousel/owl.theme.css" rel="stylesheet" type="text/css" />
-    <link href="~/wwwroot/plugins/owl-carousel/owl.transitions.css" rel="stylesheet" type="text/css" />
-    @*<link href="~/wwwroot/plugins/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css" />*@
     <link href="~/wwwroot/css/animate.css" rel="stylesheet" type="text/css" />
-    <link href="~/wwwroot/css/superslides.css" rel="stylesheet" type="text/css" />
     <link href="~/wwwroot/css/site.css" rel="stylesheet" type="text/css" />
 
     <!-- css -->
@@ -60,17 +55,11 @@
             </a>
         </div>
     </header>
-
-    <span id="header_shadow"></span>
-
-    <!-- Conteúdo -->
     @RenderBody()
-    <!-- /Conteúdo -->
-
     <footer>
         <div class="footer-bar">
             <div class="container">
-                <span class="copyright">Copyright ©Farias Solutions (Aderbal Farias). Todos os direitos reservados.</span>
+                <span class="copyright">Copyright ©Farias Solutions (Aderbal Farias)</span>
                 <a class="toTop" href="#topNav">VOLTAR AO TOPO <i class="fa fa-arrow-circle-up"></i></a>
             </div>
         </div>
@@ -79,26 +68,18 @@
             <div class="container">
                 <div class="row">
                     <div class="column col-md-4">
-                        <h3>CONTATO</h3>
-                        <p class="contact-desc">
+                        <h3>
                             <a href="http://www.aderbalfarias.com.br/" target="_blank">
-                                my website
+                                My Website
                             </a>
-                        </p>
+                        </h3>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
 
-    <!-- js -->
-    <script type="text/javascript" src="~/wwwroot/plugins/jquery-2.1.4.min.js"></script>
-    <script type="text/javascript" src="~/wwwroot/plugins/jquery.easing.1.3.js"></script>
-    <script type="text/javascript" src="~/wwwroot/plugins/jquery.cookie.js"></script>
-    <script type="text/javascript" src="~/wwwroot/plugins/jquery.appear.js"></script>
-    <script type="text/javascript" src="~/wwwroot/plugins/jquery.isotope.js"></script>
     <script type="text/javascript" src="~/wwwroot/js/layout.js"></script>
-
     <script type="text/javascript" src="~/wwwroot/plugins/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="~/wwwroot/js/scripts.js@("?v201708141110?")"></script>
     @RenderSection("scripts", required: false)
