--- a/ArchitectureTemplate.Mvc/Views/Shared/_LayoutLogin.cshtml
+++ b/ArchitectureTemplate.Mvc/Views/Shared/_LayoutLogin.cshtml
@@ -67,7 +67,7 @@
         <div class="footer-content">
             <div class="container">
                 <div class="row">
-                    <div class="column col-md-4">
+                    <div class="column col-md-4 margin-top60">
                         <h3>
                             <a href="http://www.aderbalfarias.com.br/" target="_blank">
                                 My Website
@@ -78,7 +78,8 @@
             </div>
         </div>
     </footer>
-
+    
+    <script type="text/javascript" src="~/wwwroot/plugins/jquery-2.1.4.min.js"></script>
     <script type="text/javascript" src="~/wwwroot/js/layout.js"></script>
     <script type="text/javascript" src="~/wwwroot/plugins/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="~/wwwroot/js/scripts.js@("?v201708141110?")"></script>
