--- a/ArchitectureTemplate.Mvc/wwwroot/css/layout.css
+++ b/ArchitectureTemplate.Mvc/wwwroot/css/layout.css
@@ -297,7 +297,7 @@ header#topNav nav ul.nav-main ul.dropdown-menu {
 	/*border: 0;*/
 	border-radius: 6px;
 
-	margin: 20px 0 0 0;
+	margin: 0 0 0 0;
 	padding: 10px 0;
 
 	-webkit-border-radius: 6px;
