--- a/ArchitectureTemplate.Mvc/Views/Hierarquia/Index.cshtml
+++ b/ArchitectureTemplate.Mvc/Views/Hierarquia/Index.cshtml
@@ -1,12 +1,12 @@
 ﻿@model IEnumerable<ArchitectureTemplate.Mvc.Models.HierarquiaModel>
 @{
-    ViewBag.Title = "Hierarquia";
+    ViewBag.Title = "Hierarchy";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <div class="white-row">
     <h3>
-        <strong>Hierarquia</strong>
+        <strong>Hierarchy List</strong>
     </h3>
 
 
