--- a/ArchitectureTemplate.Mvc/Views/Home/AccessDenied.cshtml
+++ b/ArchitectureTemplate.Mvc/Views/Home/AccessDenied.cshtml
@@ -7,14 +7,14 @@
         <h3><b>Prezado(a) usuário(a)</b>
         </h3>
         <p>
-            Informamos que o seu perfil não possui permissão para realizar esta operação.
+            Please be informed that your profile does not have permission to perform this operation.
         </p>
         <p>
-            Para maiores esclarecimentos, informe-se com o seu gestor.
+            For further information, please contact your manager.
         </p>
         <br>
     </article>
-    <button class="btn btn-primary btn-specific" id="btnVoltarNaoAutorizado">Voltar a tela anterior</button>
+    <button class="btn btn-primary btn-specific" id="btnVoltarNaoAutorizado">Go back to the previous screen</button>
     <br>
 </div>
 
