--- a/ArchitectureTemplate.Mvc/Views/Home/Index.cshtml
+++ b/ArchitectureTemplate.Mvc/Views/Home/Index.cshtml
@@ -6,10 +6,10 @@
     <div class="white-row" id="home">
         <div class="col-md-12">
             <h1>
-                <b>Seja muito bem-vindo</b>
+                <b>Welcome</b>
             </h1>
             <h1>
-                ao AF Architecture
+                to the AF Architecture
             </h1>
         </div>
         @*<div class="col-md-12 text-center">
