Updating of language

--- a/ArchitectureTemplate.Mvc/Views/Login/EditPassword.cshtml
+++ b/ArchitectureTemplate.Mvc/Views/Login/EditPassword.cshtml
@@ -1,19 +1,19 @@
 ﻿@model ArchitectureTemplate.Mvc.Models.LoginModel
 @{
-    ViewBag.Title = "Altereção de Senha";
+    ViewBag.Title = "Edit Password";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <div class="white-row">
     <h3>
-        <strong>Alteração de senha</strong>
+        <strong>Edit Password</strong>
     </h3>
 
     <div class="alert alert-info">
         <i class="fa fa-info-circle"></i>
-        <strong>Como funciona?</strong>
+        <strong>How is it works?</strong>
         <p>
-            A nova senha deve conter...
+            Your new password must have...
         </p>
     </div>
 
@@ -26,7 +26,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Password, new {@class = "col-sm-3 control-label"})
             <div class="col-sm-9">
-                @Html.EditorFor(model => model.Password, new {htmlAttributes = new {@class = "form-control", @placeholder = "Informe a senha atual", @required = "required"}})
+                @Html.EditorFor(model => model.Password, new {htmlAttributes = new {@class = "form-control", @placeholder = "Enter your current password", @required = "required"}})
                 @Html.ValidationMessageFor(model => model.Password, "", new {@class = "text-danger"})
             </div>
         </div>
@@ -34,7 +34,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.NewPassword, new {@class = "col-sm-3 control-label"})
             <div class="col-sm-9">
-                @Html.EditorFor(model => model.NewPassword, new {htmlAttributes = new {@class = "form-control", @placeholder = "Informe a nova senha", @required = "required"}})
+                @Html.EditorFor(model => model.NewPassword, new {htmlAttributes = new {@class = "form-control", @placeholder = "Enter your new password", @required = "required"}})
                 @Html.ValidationMessageFor(model => model.NewPassword, "", new {@class = "text-danger"})
             </div>
         </div>
@@ -42,14 +42,14 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ConfirmPassword, new {@class = "col-sm-3 control-label"})
             <div class="col-sm-9">
-                @Html.EditorFor(model => model.ConfirmPassword, new {htmlAttributes = new {@class = "form-control", @placeholder = "Confirme a nova senha", @required = "required"}})
+                @Html.EditorFor(model => model.ConfirmPassword, new {htmlAttributes = new {@class = "form-control", @placeholder = "Confirm your new password", @required = "required"}})
                 @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new {@class = "text-danger"})
             </div>
         </div>
 
         <div class="row">
             <div class="col-md-12">
-                <input type="submit" value="Salvar" class="btn btn-primary pull-right btn-specific">
+                <input type="submit" value="Save" class="btn btn-primary pull-right btn-specific">
             </div>
         </div>
     }
