--- a/ArchitectureTemplate.Mvc/Views/Login/RecoverPassword.cshtml
+++ b/ArchitectureTemplate.Mvc/Views/Login/RecoverPassword.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ArchitectureTemplate.Mvc.Models.LoginModel
 @{
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
-    ViewBag.Title = "Recuperação de Senha";
+    ViewBag.Title = "Password Recovery";
 }
 
 <section id="wrapper">
@@ -20,20 +20,20 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="white-row">
-                        <h3><strong>Recuperação de senha</strong></h3>
+                        <h3><strong>Password Recovery</strong></h3>
                         <div class="alert alert-info">
                             <i class="fa fa-info-circle"></i>
-                            <strong>Como funciona?</strong>
+                            <strong>How is it works?</strong>
                             <p>
-                                Ao definir um email existente no sistema para recuperação de senha,
-                                será enviada para sua caixa as informações necessarias para redefinição da senha.
+                                When setting an existing system email for password recovery,
+                                the information required to reset the password will be sent to your email box.
                             </p>
                         </div>
 
                         @using (Html.BeginForm("RecoverPassword", "Login", FormMethod.Post, new {@class = "input-group"}))
                         {
                             @Html.AntiForgeryToken()
-                            <input type="email" class="form-control" name="Email" id="Email" placeholder="Informe o endereço de email"/>
+                            <input type="email" class="form-control" name="Email" id="Email" placeholder="Enter your email address"/>
                             <span class="input-group-btn">
                                 <button class="btn btn-primary">Enviar</button>
                             </span>
