--- a/ArchitectureTemplate.Mvc/Views/Login/ResetPassword.cshtml
+++ b/ArchitectureTemplate.Mvc/Views/Login/ResetPassword.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ArchitectureTemplate.Mvc.Models.LoginModel
 @{
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
-    ViewBag.Title = "Redefinição de senha";
+    ViewBag.Title = "Password Reset";
 }
 
 <section id="wrapper">
@@ -13,12 +13,12 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="white-row">
-                        <h3><strong>Redefinição de senha</strong></h3>
+                        <h3><strong>Password Reset</strong></h3>
                         <div class="alert alert-info">
                             <i class="fa fa-info-circle"></i>
-                            <strong>Como funciona?</strong>
+                            <strong>How is it works?</strong>
                             <p>
-                                A nova senha deve ser...
+                                Your new password must have...
                             </p>
                         </div>
 
@@ -32,7 +32,7 @@
                             <div class="form-group">
                                 @Html.LabelFor(model => model.NewPassword, new {@class = "col-sm-3 control-label"})
                                 <div class="col-sm-9">
-                                    @Html.EditorFor(model => model.NewPassword, new {htmlAttributes = new {@class = "form-control", @placeholder = "Informe a nova senha", @required = "required"}})
+                                    @Html.EditorFor(model => model.NewPassword, new {htmlAttributes = new {@class = "form-control", @placeholder = "Enter your new passwor", @required = "required"}})
                                     @Html.ValidationMessageFor(model => model.NewPassword, "", new {@class = "text-danger"})
                                 </div>
                             </div>
@@ -40,14 +40,14 @@
                             <div class="form-group">
                                 @Html.LabelFor(model => model.ConfirmPassword, new {@class = "col-sm-3 control-label"})
                                 <div class="col-sm-9">
-                                    @Html.EditorFor(model => model.ConfirmPassword, new {htmlAttributes = new {@class = "form-control", @placeholder = "Confirme a nova senha", @required = "required"}})
+                                    @Html.EditorFor(model => model.ConfirmPassword, new {htmlAttributes = new {@class = "form-control", @placeholder = "Confirm your new passwor", @required = "required"}})
                                     @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new {@class = "text-danger"})
                                 </div>
                             </div>
 
                             <div class="row">
                                 <div class="col-md-12">
-                                    <input type="submit" value="Salvar" class="btn btn-primary pull-right btn-specific">
+                                    <input type="submit" value="Save" class="btn btn-primary pull-right btn-specific">
                                 </div>
                             </div>
                         }
