--- a/ArchitectureTemplate.Mvc/Views/Menu/Index.cshtml
+++ b/ArchitectureTemplate.Mvc/Views/Menu/Index.cshtml
@@ -1,12 +1,12 @@
 ﻿@model ArchitectureTemplate.Mvc.Models.MenuModel
 @{
-    ViewBag.Title = "Permissões de Menus";
+    ViewBag.Title = "Menu Permissions";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <div class="white-row">
     <h3>
-        <strong>Permissões de Menus</strong>
+        <strong>Menu Permissions</strong>
     </h3>
 
     <div class="form-horizontal">
@@ -14,7 +14,7 @@
             @Html.HiddenFor(model => model.Scroll)
             @Html.LabelFor(model => model.PerfilId, new {@class = "control-label col-md-5"})
             <div class="col-md-3">
-                @Html.DropDownListFor(model => model.PerfilId, new SelectList(Model.PerfilDictionary, "Key", "Value"), "Selecione o Perfil", new {@class = "form-control"})
+                @Html.DropDownListFor(model => model.PerfilId, new SelectList(Model.PerfilDictionary, "Key", "Value"), "Select Profile", new {@class = "form-control"})
             </div>
         </div>
     </div>
@@ -32,7 +32,7 @@
                 <table class="table table-bordered table-hover">
                     <tr>
                         <th class="text-center" colspan="5">
-                            <span class="uppercase">Lista de menus existentes no sistema</span>
+                            <span class="uppercase">List of menus existing in the system</span>
                         </th>
                     </tr>
                     <tr>
@@ -60,7 +60,7 @@
         }
     </div>
 
-    <button class="btn btn-primary btn-specific" id="btnSincronizar">Sincronizar</button>
+    <button class="btn btn-primary btn-specific" id="btnSincronizar">Synchronize</button>
     @*@Html.ActionLink("Exportar para Excel", "ExportToExcel", null, new { @class = "btn btn-primary btn-specific" })*@
 </div>
 
