--- a/ArchitectureTemplate.Mvc/Views/Usuario/Edit.cshtml
+++ b/ArchitectureTemplate.Mvc/Views/Usuario/Edit.cshtml
@@ -1,12 +1,12 @@
 ﻿@model ArchitectureTemplate.Mvc.Models.UsuarioModel
 @{
-    ViewBag.Title = "Editar Usuário";
+    ViewBag.Title = "Edit User";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <div class="white-row">
     <h3>
-        <strong>Editar Usuário</strong>
+        <strong>Edit User</strong>
     </h3>
 
     @using (Html.BeginForm("Edit", "Usuario", FormMethod.Post, new { @id = "formUsuario" }))
@@ -33,19 +33,6 @@
                 <div class="col-md-5">
                     @Html.DropDownListFor(model => model.PerfilId, new SelectList(Model.PerfilDictionary, "Key", "Value"), "Selecione", new {@class = "form-control", @required = true})
                     @Html.ValidationMessageFor(model => model.PerfilId, "", new {@class = "text-danger"})
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.CodigoAgente, new { @class = "control-label col-md-3" })
-                <div class="col-md-2">
-                    @Html.EditorFor(model => model.CodigoAgente, new { htmlAttributes = new { @class = "form-control", @placeholder = "Código do agente", @maxleght = 8 } })
-                </div>
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(model => model.RamalAgente, new { @class = "control-label col-md-3" })
-                <div class="col-md-2">
-                    @Html.EditorFor(model => model.RamalAgente, new { htmlAttributes = new { @class = "form-control", @placeholder = "Ramal do agente", @maxleght = 4 } })
                 </div>
             </div>
 
@@ -109,7 +96,7 @@
 
             <div class="form-group">
                 <div class="col-md-offset-3 col-md-9">
-                    <strong>Férias / Afastamento / Outros</strong>
+                    <strong>Holidays / Medical License / Other</strong>
                 </div>
             </div>
 
@@ -131,8 +118,8 @@
 
             <div class="form-group">
                 <div class="col-md-offset-3 col-md-9">
-                    <input type="submit" value="Salvar" class="btn btn-primary btn-specific" />
-                    @Html.ActionLink("Cancelar", "Index", null, new { @class = "btn btn-primary btn-specific" })
+                    <input type="submit" value="Save" class="btn btn-primary btn-specific" />
+                    @Html.ActionLink("Cancel", "Index", null, new { @class = "btn btn-primary btn-specific" })
                 </div>
             </div>
         </div>
