--- a/ArchitectureTemplate.Mvc/Views/Usuario/Index.cshtml
+++ b/ArchitectureTemplate.Mvc/Views/Usuario/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<ArchitectureTemplate.Mvc.Models.UsuarioModel>
 @{
-    ViewBag.Title = "Lista de Usuários";
+    ViewBag.Title = "List of the Users";
     //ViewBag.ContentTitle = "Cadastro de Usuários";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <div class="white-row">
     <h3>
-        <strong>Cadastro de Usuários</strong>
+        <strong>User Registration</strong>
     </h3>
 
     <div class="table-responsive table-responsive-specific">
@@ -18,12 +18,6 @@
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.HierarquiaId)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.CodigoAgente)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.RamalAgente)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.Nome)
@@ -65,12 +59,6 @@
                         @Html.DisplayFor(modelItem => item.Hierarquia.Nome)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.CodigoAgente)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.RamalAgente)
-                    </td>
-                    <td>
                         @Html.DisplayFor(modelItem => item.Nome)
                     </td>
                     <td>
@@ -99,8 +87,8 @@
                         @Html.DisplayAtivo(item.Ativo)
                     </td>
                     <td class="text-center">
-                        <a href="@Url.Action("Edit", new {id = item.Id})" title="Editar"><i class="fa fa-md fa-edit"></i></a> |
-                        @Html.ButtonDisableOrEnable(item.Ativo, Url.Action("Delete", new { id = item.Id }), $"o usuário {item.Nome}")
+                        <a href="@Url.Action("Edit", new {id = item.Id})" title="Edit"><i class="fa fa-md fa-edit"></i></a> |
+                        @Html.ButtonDisableOrEnable(item.Ativo, Url.Action("Delete", new { id = item.Id }), $"the user {item.Nome}")
                     </td>
                 </tr>
             }
@@ -110,7 +98,7 @@
     @Html.Pagination(@Url.Action("Index", "Usuario"), (int) ViewBag.PaginaAtual, (int) ViewBag.QtdePaginas)
 
     <div>
-        @Html.ActionLink("Adicionar Novo", "Create", null, new {@class = "btn btn-primary btn-specific"})
+        @Html.ActionLink("Add New", "Create", null, new {@class = "btn btn-primary btn-specific"})
     </div>
 </div>
 
