--- a/ArchitectureTemplate.Mvc/Views/Shared/_Layout.cshtml
+++ b/ArchitectureTemplate.Mvc/Views/Shared/_Layout.cshtml
@@ -54,12 +54,12 @@
                     </span>
                 </a>
                 <div class="dropdown-menu" role="menu" aria-labelledby="quick_sign_in">
-                    <h4>Gerenciar Usuário</h4>
+                    <h4>Manage User</h4>
                     <a href="@Url.Action("EditPassword", "Login")" class="btn-twitter fullwidth radius3">
-                        <i class="fa fa-expeditedssl"></i> Alterar Senha
+                        <i class="fa fa-expeditedssl"></i> Update Password
                     </a>
                     <a href="@Url.Action("LogOff", "Login")" class="btn-google-plus fullwidth radius3">
-                        <i class="fa fa-sign-out"></i> Sair
+                        <i class="fa fa-sign-out"></i> Log off
                     </a>
                 </div>
             </div>
@@ -93,7 +93,7 @@
         <div class="footer-bar">
             <div class="container">
                 <span class="copyright">&copy;Copyright Farias Solutions (Aderbal Farias)</span>
-                <a class="toTop" href="#topNav">VOLTAR AO TOPO <i class="fa fa-arrow-circle-up"></i></a>
+                <a class="toTop" href="#topNav">Back to the top <i class="fa fa-arrow-circle-up"></i></a>
             </div>
         </div>
     </footer>
