--- a/ArchitectureTemplate.Mvc/Views/Shared/_LayoutLogin.cshtml
+++ b/ArchitectureTemplate.Mvc/Views/Shared/_LayoutLogin.cshtml
@@ -60,7 +60,7 @@
         <div class="footer-bar">
             <div class="container">
                 <span class="copyright">Copyright ©Farias Solutions (Aderbal Farias)</span>
-                <a class="toTop" href="#topNav">VOLTAR AO TOPO <i class="fa fa-arrow-circle-up"></i></a>
+                <a class="toTop" href="#topNav">Back to the top <i class="fa fa-arrow-circle-up"></i></a>
             </div>
         </div>
 
