--- a/ArchitectureTemplate.Mvc/Views/Shared/_MenuLateral.cshtml
+++ b/ArchitectureTemplate.Mvc/Views/Shared/_MenuLateral.cshtml
@@ -18,7 +18,7 @@
 
 <div id="menu-lateral" class="nav-right-collapse">
     <div class="text-center menu-title">
-        <b>Navegador</b>
+        <b>Browser</b>
     </div>
     <nav role="navigation">
         <ul>
