--- a/ArchitectureTemplate.Mvc/Views/Shared/Error.cshtml
+++ b/ArchitectureTemplate.Mvc/Views/Shared/Error.cshtml
@@ -30,22 +30,22 @@
 </head>
 <body>
 	<article class="error-system error-danger text-justify-error">
-		<h3><b>Prezado(a) usuário(a)</b></h3>
+		<h3><b>Dear User</b></h3>
 		<p>
-			Informamos que ocorreu um erro inesperado no atendimento desta sua solicitação.
+		    Please be informed that an unexpected error occurred while handling this request.
 			<br>
-			Pedimos a gentileza de comunicar ao seu gestor para que entre em contato com o
-			Administrator do Sistema para comunica-lo sobre o ocorrido.
+		        We kindly ask your manager to contact your
+		        System Administrator to communicate it to you.
 			<br>
-			Tão logo a causa seja identificada e regularizada, informaremos ao seu gestor.
+		        As soon as the cause is identified and regularized, we will inform your manager.
 			<br>
-			Desde já, agradecemos a sua atenção e compreensão.
+		        Agradecemos a sua atenção e compreensão.
 		</p>
 		<p>
-			Atenciosamente
+		    Best regards
 		</p>
 		<p>
-			Administrator do Sistema
+		    System Administrator
 		</p>
 	</article>
 </body>
