--- a/ArchitectureTemplate.Mvc/Views/Shared/_MenuTop.cshtml
+++ b/ArchitectureTemplate.Mvc/Views/Shared/_MenuTop.cshtml
@@ -26,14 +26,14 @@
                     <li class="dropdown" id="Menu_1">
                         <a class="dropdown-toggle" href="#">
                             <i class="fa fa-cog"></i>
-                            <span>Configurações</span>
+                            <span>Settings</span>
                             <i class="fa fa-angle-down"></i>
                         </a>
                         <ul class="dropdown-menu">
                             @if (Model.Contains(6))
                             {
                                 <li id="Menu_6">
-                                    <a href="@Url.Action("Index", "Hierarquia")"><i class="fa fa-indent"></i>Hierarquia</a>
+                                    <a href="@Url.Action("Index", "Hierarquia")"><i class="fa fa-indent"></i>Hierarchy</a>
                                 </li>
                             }
                             @if (Model.Contains(5))
@@ -45,31 +45,31 @@
                             @if (Model.Contains(7))
                             {
                                 <li id="Menu_7">
-                                    <a href="@Url.Action("Index", "Perfil")"><i class="fa fa-id-badge"></i>Perfis</a>
+                                    <a href="@Url.Action("Index", "Perfil")"><i class="fa fa-id-badge"></i>Profile</a>
                                 </li>
                             }
                             @if (Model.Contains(3))
                             {
                                 <li id="Menu_3">
-                                    <a href="@Url.Action("Index", "Permissao")"><i class="fa fa-legal"></i>Permissões</a>
+                                    <a href="@Url.Action("Index", "Permissao")"><i class="fa fa-legal"></i>Permissions</a>
                                 </li>
                             }
                             @if (Model.Contains(4))
                             {
                                 <li id="Menu_4">
-                                    <a href="@Url.Action("Index", "Tela")"><i class="fa fa-desktop"></i>Telas</a>
+                                    <a href="@Url.Action("Index", "Tela")"><i class="fa fa-desktop"></i>Screens</a>
                                 </li>
                             }
                             @if (Model.Contains(8))
                             {
                                 <li id="Menu_8">
-                                    <a href="@Url.Action("Index", "Usuario")"><i class="fa fa-user-o"></i>Usuários</a>
+                                    <a href="@Url.Action("Index", "Usuario")"><i class="fa fa-user-o"></i>Users</a>
                                 </li>
                             }
                             @if (Model.Contains(2))
                             {
                                 <li id="Menu_2">
-                                    <a href="@Url.Action("Index", "Menu")"><i class="fa fa-bars"></i>Parametrização de Menus</a>
+                                    <a href="@Url.Action("Index", "Menu")"><i class="fa fa-bars"></i>Menus Setting</a>
                                 </li>
                             }
                         </ul>
