--- a/ArchitectureTemplate.Mvc/Views/Shared/_MenuTop.cshtml
+++ b/ArchitectureTemplate.Mvc/Views/Shared/_MenuTop.cshtml
@@ -45,7 +45,7 @@
                             @if (Model.Contains(7))
                             {
                                 <li id="Menu_7">
-                                    <a href="@Url.Action("Index", "Perfil")"><i class="fa fa-id-badge"></i>Profile</a>
+                                    <a href="@Url.Action("Index", "Profile")"><i class="fa fa-id-badge"></i>Profile</a>
                                 </li>
                             }
                             @if (Model.Contains(3))
