--- a/ArchitectureTemplate.Mvc/Views/Usuario/Index.cshtml
+++ b/ArchitectureTemplate.Mvc/Views/Usuario/Index.cshtml
@@ -14,7 +14,7 @@
         <table class="table table-bordered table-hover">
             <tr>
                 <th>
-                    @Html.DisplayNameFor(model => model.PerfilId)
+                    @Html.DisplayNameFor(model => model.ProfileId)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.HierarquiaId)
@@ -53,7 +53,7 @@
             {
                 <tr>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Perfil.Nome)
+                        @Html.DisplayFor(modelItem => item.Profile.Nome)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Hierarquia.Nome)
