--- a/ArchitectureTemplate.Mvc/Views/Permissao/Index.cshtml
+++ b/ArchitectureTemplate.Mvc/Views/Permissao/Index.cshtml
@@ -12,9 +12,9 @@
     <div class="form-horizontal">
         <div class="form-group">
             @Html.HiddenFor(model => model.Scroll)
-            @Html.LabelFor(model => model.PerfilId, new {@class = "control-label col-md-5"})
+            @Html.LabelFor(model => model.ProfileId, new {@class = "control-label col-md-5"})
             <div class="col-md-3">
-                @Html.DropDownListFor(model => model.PerfilId, new SelectList(Model.PerfilDictionary, "Key", "Value"), "Selecione o Perfil", new {@class = "form-control"})
+                @Html.DropDownListFor(model => model.ProfileId, new SelectList(Model.ProfileDictionary, "Key", "Value"), "Selecione o Profile", new {@class = "form-control"})
             </div>
         </div>
     </div>
@@ -22,7 +22,7 @@
     <hr>
 
     <div id="DivDados">
-        @if (Model.PerfilPorTelaList != null && Model.PerfilPorTelaList.Any())
+        @if (Model.ProfilePorTelaList != null && Model.ProfilePorTelaList.Any())
         {
             @Html.Partial("_List", Model)
         }
@@ -88,12 +88,12 @@
                 $(window).scrollTop($("#Scroll").val());
             }
 
-            $("#PerfilId").change(function () {
-                var perfilId = $(this).val();
+            $("#ProfileId").change(function () {
+                var ProfileId = $(this).val();
                 $.ajax({
                     url: "/Permissao/List",
                     type: "Get",
-                    data: { id: perfilId },
+                    data: { id: ProfileId },
                     dataType: "html",
                     cache: false,
                     success: function (data) {
