--- a/ArchitectureTemplate.Mvc/Views/Tela/Edit.cshtml
+++ b/ArchitectureTemplate.Mvc/Views/Tela/Edit.cshtml
@@ -21,7 +21,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Nome, new {@class = "control-label col-md-3"})
                 <div class="col-md-4">
-                    @Html.EditorFor(model => model.Nome, new {htmlAttributes = new {@class = "form-control", @required = true, @maxlength = 50, @placeholder = "Informe o nome do perfil"}})
+                    @Html.EditorFor(model => model.Nome, new {htmlAttributes = new {@class = "form-control", @required = true, @maxlength = 50, @placeholder = "Informe o nome do Profile"}})
                     @Html.ValidationMessageFor(model => model.Nome, "", new {@class = "text-danger"})
                 </div>
             </div>
